--- a/app/views/pages/admin/product_management.jade
+++ b/app/views/pages/admin/product_management.jade
@@ -37,7 +37,9 @@ block scripts
   script#newsize(type="text/tmpl").
     <div class="form-group">
       <label></label>
-      <input class="sizetext" type="text" name="">
+      <div class="input-box">
+        <input class="sizetext" type="text" name="">
+      </div>
       <a href="javascript:void(0);" class="delete">
         <i class="fa fa-trash"></i>
       </a>
