--- a/public/less/admin.less
+++ b/public/less/admin.less
@@ -1,8 +1,14 @@
+@import 'variable.less';
 @import 'mixin.less';
 @import 'reset.less';
+@import 'public_admin.less';
+@import 'form.less';
 
 @import 'admin-public.less';
 @import 'login.less';
+
 @import 'product_management.less';
+
+
 @import 'new-product.less';
 @import 'userlist.less';
