--- a/app/views/pages/admin/product_management.pug
+++ b/app/views/pages/admin/product_management.pug
@@ -23,7 +23,7 @@ block content
             tr.j-productItem
               td
                 .imgbox
-                  img(src="#{product.img[0]}")
+                  img(src="#{product.pics[0]}")
               td
                 a(href='admin/product') #{product.name}
               td
