add category collection controller page

--- a/app/views/adminLayout.pug
+++ b/app/views/adminLayout.pug
@@ -23,6 +23,8 @@ html
             a(href="/admin") 商品管理
           li
             a(href="/admin/user/list") 用户列表
+          li
+            a(href="/admin/category") 商品分类
       .main
         block content
     include ./includes/admin-footer
