new category modal

--- a/app/views/pages/admin/category/category_list.pug
+++ b/app/views/pages/admin/category/category_list.pug
@@ -19,4 +19,5 @@ block content
             tr.j-productItem
               td
                 a(href='javascript:;') #{category.name}
-              td category.description
+              td #{category.desc}
+  include _new_category
