new category modal

--- a/app/views/pages/admin/category/_new_category.pug
+++ b/app/views/pages/admin/category/_new_category.pug
@@ -5,7 +5,7 @@
       a.close(href="javascrip:;",data-dismiss="modal")
         i.fa.fa-close
     .modal-content
-      form#newproduct(action="/admin/category/new",method="POST")
+      form#newcategory(action="/admin/category/new",method="POST")
         .form-group
           label(for="name") 分类名称*
           .input-box
