--- a/app/views/pages/admin/new-product.pug
+++ b/app/views/pages/admin/new-product.pug
@@ -38,6 +38,10 @@
           label(for="stock") 库存*
           .input-box
             input#stock.required.rqrednum(type="text",name="product[stock]")
+        .form-group.textarea
+          label(for="dest") 库存*
+          .input-box.area-box
+            textarea#dest.required.rqrednum(type="text",name="product[dest]")
         .form-group.uploadPic-form
           label 图片*
           .pic-wrap
