use jade template & remove pug

--- a/app/views/pages/admin/product_management.jade
+++ b/app/views/pages/admin/product_management.jade
@@ -23,7 +23,7 @@ block content
             tr.j-productItem
               td
                 .imgbox
-                  img(src="#{product.pics[0]}")
+                  img(src="#{product.pics}")
               td
                 a(href='admin/product') #{product.name}
               td
