调整view目录结构

--- a/app/views/admin/new-product.jade
+++ b/app/views/admin/new-product.jade
@@ -47,7 +47,7 @@
           .pic-wrap
           a.newpic(href="javascrip:void(0);")
             i.fa.fa-plus
-          input.required.hide(type="file",name="product[pics]",accept="image/*")
+          input.required.hide(type="file",name="pics",accept="image/*")
     .modal-footer
       button.next.disabled(type="submit") 确定
       button.cancle 取消
