--- a/app/views/admin/login.jade
+++ b/app/views/admin/login.jade
@@ -47,7 +47,7 @@ html
                 input.repwd(type="password",placeholder="重复密码")
                 button(type="submit") 注册
                 a#login.newuser(href="javacript:;") 登录
-    include ../../includes/admin-footer
+    include ../includes/admin-footer
     script.
       $(function(){
         $('#newuser').on('click',function(e){
