--- a/app/views/admin/product_management/index.jade
+++ b/app/views/admin/product_management/index.jade
@@ -33,7 +33,7 @@ block content
               td(data-product_id="#{product._id}")
                 a.edit(href="javascript:void(0);") 编辑
                 a.delete.j-delete(href="javascript:void(0);") 删除
-  include new-product
+  include _new_product
 block scripts
   script#newInput(type="text/tmpl").
     <div class="form-group j-form-group">
