--- a/app/views/admin/product_management/_new_product.jade
+++ b/app/views/admin/product_management/_new_product.jade
@@ -39,7 +39,7 @@
           .input-box
             input#stock.required.rqrednum(type="text",name="product[stock]")
         .form-group.textarea
-          label(for="dest") 库存*
+          label(for="dest") 简介*
           .input-box.area-box
             textarea#dest.required.rqrednum(type="text",name="product[dest]")
         .form-group.uploadPic-form
