fixed style of edit product page

--- a/app/views/admin/product_management/product_edit.jade
+++ b/app/views/admin/product_management/product_edit.jade
@@ -8,9 +8,9 @@ block content
         label 商品名称
         .input-box
           input#name.required(type='text',name='product[name]')
-      .form-group
+      .form-group.textarea
         label 简述
-        .input-box
+        .input-box.area-box
           textarea#desc.required(type='text',name='product[desc]')
       .form-group
         label 单价
