--- a/public/less/global.less
+++ b/public/less/global.less
@@ -3,9 +3,9 @@
 @import 'reset.less';
 
 @import 'global.less';
-@import 'public.less';
-@import 'header.less';
+@import './mobile/public.less';
+@import './mobile/header.less';
 
-@import 'home.less';
-@import 'list.less';
-@import 'details.less';
+@import './mobile/home.less';
+@import './mobile/list.less';
+@import './mobile/details.less';
