--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -102,6 +102,7 @@ block content
       .footer-buy
         span.buy-cart 加入购物车
         span.buy-now 立即购买
+    include _add_to_cart
 block scripts
   script.
     window.onload = function(){
