--- a/public/less/global.less
+++ b/public/less/global.less
@@ -8,4 +8,6 @@
 
 @import './mobile/home.less';
 @import './mobile/list.less';
+
 @import './mobile/details.less';
+@import './mobile/add_to_cart.less';
