add to cart popup

--- a/app/views/mobile/product_details/_add_to_cart.jade
+++ b/app/views/mobile/product_details/_add_to_cart.jade
@@ -22,8 +22,8 @@
       .condiction
         label 数量：
         .qty-box
-          a(href="javascript:;") -
-          input(type="text")
-          a(href="javascript:;") +
+          span.num-reduce.lf -
+          em.num-input.lf 1
+          span.num-add.lf +
     .modal-footer
-      a.button(href="javascript:;") 确认
+      span.button 确认
