show & hide popup

--- a/app/views/mobile/product_details/_add_to_cart.jade
+++ b/app/views/mobile/product_details/_add_to_cart.jade
@@ -1,7 +1,7 @@
-.mask
+.mask.j-popup
   .pop.add_to_cart
     .modal-header
-      i.icon.close_icon ╳
+      i.icon.close_icon.j-close ╳
       .subtitle-img
         img(src="#{product.pics[0]}")
       .subtitle-desc
@@ -26,4 +26,4 @@
           em.num-input.lf 1
           span.num-add.lf +
     .modal-footer
-      span.button 确认
+      span.button.j-confirm 确认
