--- a/public/style/global.css
+++ b/public/style/global.css
@@ -603,6 +603,7 @@ header.bar.bar-nav form .search-btn {
   background: #ec312d;
 }
 .mask {
+  display: none;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
