--- a/public/less/mobile/add_to_cart.less
+++ b/public/less/mobile/add_to_cart.less
@@ -86,6 +86,10 @@
       margin-right: 10px;
       border: 1px solid #bbb;
     }
+    .selected{
+      color: #ed4566;
+      border-color: #ed4566;
+    }
   }
   .qty-box{
     border: 1px solid #bbb;
