--- a/app/views/mobile/product_details/_add_to_cart.jade
+++ b/app/views/mobile/product_details/_add_to_cart.jade
@@ -10,11 +10,11 @@
           span.pirce  &yen;#{product.price * product.discount/10}
           span.stock 库存#{product.stock}件
     .modal-content
-      .condiction
+      .condiction.j-style(data-rules="single")
         label 颜色：
         span 黑白套装
         span 灰白套装
-      .condiction
+      .condiction.j-style(data-rules="single")
         label 尺寸
         span S
         span M
@@ -22,8 +22,8 @@
       .condiction
         label 数量：
         .qty-box
-          span.num-reduce.lf -
-          em.num-input.lf 1
-          span.num-add.lf +
+          span.num-reduce.lf.j-reduct -
+          em.num-input.lf.j-num 1
+          span.num-add.lf.j-add +
     .modal-footer
       span.button.j-confirm 确认
