--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -114,6 +114,26 @@ block scripts
     }
     $(function(){
       var pop = new popup();
+      $('.j-confirm').on('click',function(){
+        pop.close();
+        var type = $(this).data('type');
+        if(type == 'add'){
+          var size = $('.j-style[data-type="size"] .selected').html(),
+              color = $('.j-style[data-type="color"] .selected').html();
+          var cart = {
+            qty: parseInt($('.j-num').html()),
+            size: size,
+            color: color
+          };
+          $.ajax({
+            url: '/product/addtocart',
+            method: 'POST',
+            type: 'JSON',
+            data: cart,
+            success: function(data){}
+          });
+        }else if(type == "buy"){}
+      });
       function select(){
         $('.j-style span').on('click',function(){
           var rules = $(this).parents('.j-style').data('rules');
