--- a/app/views/mobile/product_details/_add_to_cart.jade
+++ b/app/views/mobile/product_details/_add_to_cart.jade
@@ -7,7 +7,7 @@
       .subtitle-desc
         p.subtitle-text #{product.name}
         .info-price
-          span.pirce  &yen;#{product.price * product.discount/10}
+          span.pirce.j-price  &yen;#{product.price * product.discount/10}
           span.stock 库存#{product.stock}件
     .modal-content
       .condiction.j-style(data-rules="single",data-type="color")
