--- a/app/views/mobile/product_details/index.jade
+++ b/app/views/mobile/product_details/index.jade
@@ -136,8 +136,7 @@ block scripts
         };
         $.ajax({
           url: url,
-          method: 'POST',
-          type: 'JSON',
+          type: 'POST',
           data: cart,
           success: function(data){}
         });
