fixed add to cart bug

--- a/app/views/mobile/product_details/_add_to_cart.jade
+++ b/app/views/mobile/product_details/_add_to_cart.jade
@@ -25,4 +25,4 @@
           em.num-input.lf.j-num 1
           span.num-add.lf.j-add +
     .modal-footer
-      span.button.j-confirm 确认
+      span.button.j-confirm(data-productid="#{product._id}") 确认
